# MP-RW-LSH

./: README.md
ANNS_E/: Readme.md
ANNS_E/A-iDEC/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
ANNS_E/A-iDEC/benchmark/: CMakeLists.txt  CTestTestfile.cmake  Makefile  SpBenchmarkHelper.h  benchmark_config.h  cmake_install.cmake  old_benchmark_brute_force.cpp  sp_bench_1nn_all.cpp  sp_bench_brute_force.cpp
ANNS_E/A-iDEC/cmake/: Findbenchmark.cmake  Findformat.cmake
ANNS_E/A-iDEC/config/: benchmark_config.h.in
ANNS_E/A-iDEC/example/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  is_same_example.cpp
ANNS_E/A-iDEC/include/: ann_sp.hpp  brute_force_sp.hpp  distance_metric_sp.hpp  gadget.hpp  io.hpp  rng_utils.hpp  sketch_sp.hpp  srs_utils.hpp  string_embed_sp.hpp  string_sketch_sp.hpp
ANNS_E/A-iDEC/microbenchmark/: CMakeLists.txt  CTestTestfile.cmake  Makefile  bench_cgk_impl.cpp  cmake_install.cmake
ANNS_E/A-iDEC/py/: dot_prod_cb_cb_enc_l_test.cpp  dot_prod_cb_cb_enc_s_test.cpp  dot_prod_cb_enc_s_test.cpp  dot_prod_cb_s_test.cpp  dot_prod_l_test.cpp  dot_prod_s_test.cpp  popcnt_l_test.cpp  popcnt_s_test.cpp  popcnt_test_cases.py  random_data.py
ANNS_E/A-iDEC/py/templates/: dot_prod_test.cpp.template  popcnt_test.cpp.template
ANNS_E/feature_data_generation/: CMakeLists.txt  Makefile  Untitled.ipynb  bar.cpp  convert.cpp  distance_metric_sp.hpp  popcnt.hpp  sketch_sp.h  string_feature.h
ANNS_E/feature_data_generation/convert_data/: CMakeCache.txt  cmake_install.cmake  gni.txt  record.txt  srs_utils.hpp
ANNS_E/feature_data_generation/convert_data/.ipynb_checkpoints/: Untitled (copy)-checkpoint.ipynb
ANNS_E/feature_data_generation/convert_data/rollinghashcpp/: adler32.h  cyclichash.h  generalhash.h  mersennetwister.h  rabinkarphash.h  ztimer.h
ANNS_E/feature_data_generation/edlib/: CMakeLists.txt  edlib.cpp  edlib.h  helloWorld.cpp
ANNS_E/feature_data_generation/rollinghashcpp/: characterhash.h
Common/: .gitignore  AnnResultWriter.hpp  AnnResultWriterTest.cc  Exception.h  FilenameUtils.hpp  FilenameUtilsTest.cc  Makefile  MemUtils.h  StringUtils.hpp  StringUtilsTest.cc  Timer.hpp  TimerTest.cc
EXPERIMENTS/: README.md  dataset_info.txt  dataset_info_used.txt  datasets_info.json  prepare_l1.py  requirements.txt  run_l1.sh
EXPERIMENTS/datasets/: .gitignore
FALCONN_RW/: FalconnMain_l1.cc  Makefile  run.sh
FALCONN_RW/doc/latex/: lsh_nn_table.h
FALCONN_RW/src/include/falconn/: falconn_global.h  lsh_nn_table.h
FALCONN_RW/src/include/falconn/core/: composite_hash_table.h  data_storage.h  dyatree.h  euclidean_distance.h  flat_hash_table.h  gaussian_hash.h  gaussian_hash_no_precomputed.h  hyperplane_hash.h  hyperplane_hash的副本.h  l1_distance.h  lsh_function_helpers.h  lsh_query_new.h  lsh_table.h  lsh_table_new.h  multiprobe.h  rangesummable.h
FALCONN_RW/src/include/falconn/wrapper/: cpp_wrapper_impl.h
FALCONN_RW/test/: CMakeLists.txt  cmake_install.cmake  histogram.py  test.cc  tf.cc
FALCONN_cauchy/: CMakeLists.txt  FalconnMain.cc  FalconnMain_l1_cauchy.cc  FalconnMain_l1_test.cc  Makefile  falconn-l1-cauchy  falconn-l1-rw  run_cauchy.sh
FALCONN_cauchy/src/include/falconn/core/: composite_hash_table.h  gaussian_hash.h  lsh_query_new.h  lsh_table.h
FALCONN_cauchy/test/: CMakeCache.txt  Makefile  test
LinearScan/: .gitignore  CMakeCache.txt  CMakeLists.txt  Hdf5File.h  Makefile  cmake_install.cmake  linear_scan  linear_scan_compact.cpp  linear_scan_compact.h  linear_scan_compact_example.cc  linear_scan_l1.cpp  linear_scan_l1.h  linear_scan_main.cc  linear_scan_main_l1.cc
